# testBolid

./: CMakeLists.txt  README.md  main.cpp  tests.cpp
include/: utils.hpp
